--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.33.0",
     "netlify-identity-widget": "^1.9.2",
     "next": "13.2.4",
     "react": "18.2.0",
